[package]
name = "telegram_ngrok_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
serde_yaml = "0.9.31"
clap = { version = "4.5.0", features = ["derive"] }
